[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Burnable.gd" type="Script" id=1]
[ext_resource path="res://sprites/Fire.png" type="Texture" id=2]

[node name="Burnable" type="Node2D" groups=[
"Burnables",
]]
z_index = 1
z_as_relative = false
script = ExtResource( 1 )
aflame = true

[node name="Flame1" type="Sprite" parent="."]
visible = false
position = Vector2( 45.8047, 95.5076 )
scale = Vector2( 0.4, 0.4 )
z_index = 9
z_as_relative = false
texture = ExtResource( 2 )

[node name="Flame2" type="Sprite" parent="."]
visible = false
position = Vector2( 74.0671, -115.974 )
scale = Vector2( 0.7, 0.7 )
z_index = 9
z_as_relative = false
texture = ExtResource( 2 )

[node name="Flame3" type="Sprite" parent="."]
visible = false
position = Vector2( -105.253, -36.059 )
scale = Vector2( 0.5, 0.5 )
z_index = 9
z_as_relative = false
texture = ExtResource( 2 )
